ready for deploy

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=4000
 SECRET=secret
-MONGODB_URI=mongodb://localhost:27017/airbnb
+MONGODB_URI=mongodb://localhost:27017/tickets
 STRIPE_SECRET=sk_test_n4BOEl5rUvD4p38evR0DkW9c00JkVzHgME
 STRIPE_PUBLISH=pk_test_RFZrPP1Ez6Bq8WArOADRk3gy0070dfs07P
